Move public order office email address lookup to separate endpoint
